<resources>
    <string name="app_name">MedicationReminder</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_pill">Add a pill</string>
    <string name="action_edit_pill">Edit a pill</string>

    <string name="hint_medication_name">Medication name</string>
    <string name="hint_medication_dosage">Dosage</string>
    <string name="hint_medication_description">Description</string>

    <string name="message_load_data_error">Something went wrong</string>

    <string name="pref_key_app_version" translatable="false">app_version_key</string>
    <string name="pref_title_category_about">About</string>
    <string name="pref_title_app_version">Version</string>
    <string name="pref_summary_app_version_unknown">Unknown</string>
</resources>
